--- a/tests/io/Example.yml
+++ b/tests/io/Example.yml
@@ -1,6 +1,11 @@
 Particles:
   N: 50
 
+Interaction:
+  InverseSquareLaw:
+    Constant: 39.47841760435743  # 4 pi^2
+    Softening: 1.e-2
+
 Evolution:
   InitialDt: 1.e-3
   Timesteps: 10
